@@ -42,7 +42,7 @@ void EXPORT_FUNC(grub_list_insert) (grub_list_t *head, grub_list_t item,
 
 static inline void *
 grub_bad_type_cast_real (int line, const char *file)
-     __attribute__ ((error ("bad type cast between incompatible grub types")));
+     ATTRIBUTE_ERROR ("bad type cast between incompatible grub types");
 
 static inline void *
 grub_bad_type_cast_real (int line, const char *file)
